# docusheild

./: README.md  development_strategy.tex  pyproject.toml
src/docushield/: __init__.py  audit.py  cli.py  detector.py  evaluator.py  image-detector.py  llm-model.py  mitigation.py  models.py  pipeline.py  policy.py  prototype_assets.py  virtual_env.py
tests/: test_pipeline.py
unity_prototype/: README.md
unity_prototype/Assets/Scripts/: DocuShieldDetectorContract.cs  DocuShieldOverlayDemo.cs  DocuShieldSceneBootstrap.cs
unity_prototype/Assets/StreamingAssets/: docushield_scene_spec.json
