[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docushield"
version = "0.1.0"
description = "Prototype implementation of a Unity/Quest privacy mitigation pipeline"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
docushield-run = "docushield.cli:main"
